--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
-  "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
-  "main": "server.js",
+  "name": "zira",
+  "version": "2.0.2",
+  "description": "Zira is a reaction role Discord bot that allows users to give themselves roles by reacting on messages with an emoji/emote.",
+  "main": "Zira.js",
   "scripts": {
-    "start": "node server.js"
-  },
-  "dependencies": {
-    "express": "^4.16.3"
-  },
-  "engines": {
-    "node": "8.x"
+    "start": "pm2 start pm2.json && pm2 log",
+    "restart": "pm2 delete Zira && pm2 start pm2.json && pm2 log",
+    "stop": "pm2 delete Zira"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
+    "type": "git",
+    "url": "git+https://github.com/ZiraDiscord/Zira.git"
   },
-  "license": "MIT",
   "keywords": [
-    "node",
-    "glitch",
-    "express"
-  ]
+    "discord",
+    "zira",
+    "reaction",
+    "role"
+  ],
+  "author": "HazedSPaCEx (Hazed SPaCEx#2574)",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/ZiraDiscord/Zira/issues"
+  },
+  "homepage": "https://github.com/ZiraDiscord/Zira#readme",
+  "dependencies": {
+    "bufferutil": "^3.0.5",
+    "eris": "^0.8.6",
+    "erlpack": "github:abalabahaha/erlpack",
+    "eventemitter3": "^3.1.0",
+    "mime": "^2.4.0",
+    "moment": "^2.23.0",
+    "monk": "^6.0.6",
+    "numeral": "^2.0.6",
+    "request": "^2.88.0",
+    "short-unique-id": "^1.1.1",
+    "text-table": "^0.2.0",
+    "trello": "^0.9.0",
+    "winston": "^3.1.0"
+  }
 }
