⏲🐒 Checkpoint ./index.js:2036837/251 ./commands/search.js:2667180/5595 ./commands/np.js:2036837/2978 ./data/np.js:2036837/46 ./package.json:2036837/1144

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "private": true,
   "dependencies": {
     "discord.js": "github:discordjs/discord.js",
+    "moment": "^2.24.0",
+    "moment-duration-format": "^2.3.2",
     "opusscript": "0.0.7",
     "simple-youtube-api": "^5.1.1",
     "ytdl-core": "^1.0.0",
