--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	//"TOKEN": "NTk1MjczMTY4NDU4MDg4NDYy.XioJyw.IA6C5ZhtCzA4PbKIdPdI1-qzQpM",
+	"TOKEN": "NTk1MjczMTY4NDU4MDg4NDYy.XioJyw.IA6C5ZhtCzA4PbKIdPdI1-qzQpM",
 	"YOUTUBE_API_KEY": "AIzaSyCmgcAOT6Y6mvA0nrWzm2R7eLuKj3dPqjc",
 	"MAX_PLAYLIST_SIZE": 10,
 	"PREFIX": "/"
